[tool.poetry]
name = "book-recomender-system"
version = "0.1.0"
description = ""
authors = ["Ahmad <almohammedahmed2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
jupyterlab = "^3.0.16"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
